# glossia

./: .env.json  .env.test  .formatter.exs  .gitattributes  .gitignore  .iex.exs  .mise.toml  .tool-versions  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTENT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  L10N.md  LICENSE  LICENSE.md  NEXT_SESSION.md  PLAN.md  README.md  TODO.md  cliff.toml  fly.canary.toml  fly.toml  fnox.toml  glossia.jsonc  mise.toml  mix.exs  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  renovate.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  vitest.config.ts
.devcontainer/: Dockerfile  devcontainer.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: main.rs
cli/: CHANGELOG.md  Cargo.toml  README.md  RELEASE.md  go.mod  go.sum  package.json  tsconfig.json  tsconfig.typecheck.json
cli/cmd/glossia/: main.go
cli/cmd/render-aqua-registry/: main.go
cli/internal/glossia/: agent.go  args.go  checks.go  checks_test.go  commands.go  config.go  config_test.go  format.go  format_test.go  glob.go  hash.go  hash_test.go  llm.go  locks.go  main.go  output.go  output_test.go  pathing.go  plan.go  reporter.go  root.go
cli/scripts/: build-executables.ts  render-aqua-registry.ts
cli/src/: acp.rs  agent.rs  agent.ts  checks.rs  checks.test.ts  checks.ts  config.test.ts  config.ts  format.rs  format.test.ts  format.ts  glob.ts  hash.test.ts  hash.ts  llm.rs  llm.ts  locks.ts  main.rs  main.ts  output.rs  output.test.ts  output.ts  pathing.ts  plan.ts  reporter.ts  root.rs  root.ts
cli/src/commands/: check.rs  check.ts  clean.ts  init.ts  mod.rs  revisit.rs  revisit.ts  status.ts  translate.ts
(+3287 files in other folders)
