[package]
name = "l10n"
version = "0.13.3"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
sha2 = "0.10"
hex = "0.4"
regex = "1"
globset = "0.4"
walkdir = "2"
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
pathdiff = "0.2"
anyhow = "1"
thiserror = "2"
atty = "0.2"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
