[package]
name = "glossia-desktop"
version = "0.1.0"
description = "Glossia Desktop App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
glossia-core = { path = "../../../crates/glossia-core" }
tauri = { version = "2.0", features = ["devtools"] }
tauri-plugin-shell = "2.0"
serde = { workspace = true }
serde_json = { workspace = true }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
